--- a/day02/basic_css/cacao.html
+++ b/day02/basic_css/cacao.html
@@ -14,12 +14,12 @@
     />
   </head>
   <body>
-    <div class="normal">로그인</div>
-    <div class="kakao">
+    <div class="normal button2">로그인</div>
+    <div class="kakao button2">
       <i class="fa-solid fa-comment"></i>
       <span>카카오 로그인</span>
     </div>
-    <div class="apple">
+    <div class="apple button2">
       <i class="fa-brands fa-apple"></i>
       <span>Apple 로그인</span>
     </div>
