--- a/day02/round_button/round_button.html
+++ b/day02/round_button/round_button.html
@@ -15,12 +15,12 @@
   </head>
   <body>
     
-    <div>
-        <span class="button">
+    <div class="button_layout">
+        <div class="button sky">
             <i class="fa-solid fa-envelope email"></i>
-          </span>
+          </div>
       
-          <span class="button1">
+          <div class="button black">
             <i class="fa-brands fa-apple apple"></i>
     </div>
     </span>
