--- a/day03_review/icons/icons.html
+++ b/day03_review/icons/icons.html
@@ -14,48 +14,40 @@
     />
   </head>
   <body>
-    <!-- <div class="button">
-      <div class="button1">
-        <span class="charge"><i class="fa-solid fa-charging-station"></i></span>
-        <span>충전소 찾기</span>
-      </div>
-      <div class="button1">
-        <span class="gas"><i class="fa-solid fa-gas-pump"></i></span>
-        <span>주유소 찾기</span>
-      </div>
-    </div> -->
-
-    <!-- <div class="button2">
-      <div>
-        <div><i class="fa-solid fa-car"></i></div>
-        <div>내 차 관리</div>
-      </div>
-      <div>
-        <div><i class="fa-solid fa-oil-well"></i></div>
-        <div>유가 동향</div>
-      </div>
-      <div>
-        <div><i class="fa-solid fa-cart-shopping"></i></div>
-        <div>쇼핑하기</div>
-      </div>
-      <div>
-        <div><i class="fa-solid fa-tty"></i></div>
-        <div>커뮤니티</div>
-      </div>
-    </div> -->
-
     <div class="find_layout">
       <div class="find_button">
         <div class="icon">
           <i class="fa-solid fa-charging-station red"></i>
         </div>
         <span class="text">충전소 찾기</span>
+      </div>
+      <div class="find_button">
+        <div class="icon">
+          <i class="fa-solid fa-gas-pump blue"></i>
+        </div>
+        <span class="text">주유소 찾기</span>
+      </div>
+    </div>
 
-        <div class="find_button">
-            <div class="icon">
-                <i class="fa-solid fa-gas-pump blue"></i>
-            </div>
-            <span class="text">주유소 찾기</span>
+    <div class="find_layout2">
+      <div class="find_button2">
+        <div class="icon2"><i class="fa-solid fa-car blue"></i></div>
+        <span class="text2">내 차 관리</span>
+      </div>
+
+      <div class="find_button2">
+        <div class="icon2"><i class="fa-solid fa-oil-well red"></i></div>
+        <span class="text2">유가동향</span>
+      </div>
+
+      <div class="find_button2">
+        <div class="icon2"><i class="fa-solid fa-cart-shopping blue"></i></div>
+        <span class="text2">쇼핑하기</span>
+      </div>
+
+      <div class="find_button2">
+        <div class="icon2"><i class="fa-solid fa-tower-cell blue"></i></div>
+        <span class="text2">커뮤니티</span>
       </div>
     </div>
   </body>
