--- a/day05/ediya/ediya2.html
+++ b/day05/ediya/ediya2.html
@@ -16,6 +16,33 @@
         </div>
         <div class="title">허쉬 스트로베리</div>
         <div class="button">선물하기</div>
+        <div class="mask">
+          <span>품절입니다.</span>
+        </div>
+      </div>
+
+      <div class="coffee">
+        <div class="imageBox">
+          <img src="coffee1-removebg-preview.png" alt="" />
+        </div>
+        <div class="title">허쉬 스트로베리</div>
+        <div class="button">선물하기</div>
+      </div>
+
+      <div class="coffee">
+        <div class="imageBox">
+          <img src="coffee1-removebg-preview.png" alt="" />
+        </div>
+        <div class="title">허쉬 스트로베리</div>
+        <div class="button">선물하기</div>
+      </div>
+
+      <div class="coffee">
+        <div class="imageBox">
+          <img src="coffee1-removebg-preview.png" alt="" />
+        </div>
+        <div class="title">허쉬 스트로베리</div>
+        <div class="button">선물하기</div>
       </div>
     </div>
   </body>
