--- a/day06/toss/toss2.html
+++ b/day06/toss/toss2.html
@@ -10,37 +10,39 @@
     <link rel="stylesheet" href="header.css" />
   </head>
   <body>
-    <div class="header">
-      <div class="navigation">
+    <header class="header">
+      <nav class="navigation">
         <div class="logoBox">
           <img src="Toss_Logo_Primary_Reverse.png" alt="" />
         </div>
         <div class="siteBox">
-          <div class="pages">
-            <span>회사 소개</span>
-            <span>고객센터</span>
-            <span>자주 묻는 질문</span>
-            <span>토스 인증서</span>
-            <span>채용</span>
-          </div>
-          <div class="language">
-            <span>KOR</span>
-            <span>|</span>
-            <span>ENG</span>
-          </div>
+          <ul class="pages">
+            <li>회사 소개</li>
+            <li>고객센터</li>
+            <li>자주 묻는 질문</li>
+            <li>토스 인증서</li>
+            <li>채용</li>
+          </ul>
+          <ul class="language">
+            <li>KOR</li>
+            <li>|</li>
+            <li>ENG</li>
+          </ul>
         </div>
-      </div>
-    </div>
+      </nav>
+    </header>
 
-    <div class="main">
-      <div class="contents">
-        <h1>금융의 모든 것</h1>
-        <h1 class="title">토스에서 쉽고 간편하게</h1>
-        <div class="buttons">
-          <div class="button">Apple</div>
-          <div class="button">Google</div>
+    <main class="main">
+      <section>
+        <div class="contents">
+          <h1>금융의 모든 것</h1>
+          <h1 class="title">토스에서 쉽고 간편하게</h1>
+          <div class="buttons">
+            <div class="button">Apple</div>
+            <div class="button">Google</div>
+          </div>
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
   </body>
 </html>
