--- a/day07/firfin/firfin.html
+++ b/day07/firfin/firfin.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="firfinheader.css" />
     <link rel="stylesheet" href="firfinmain.css" />
-    <link rel="stylesheet" href="../root.css" />
+    <link rel="stylesheet" href="root.css" />
   </head>
   <body>
     <header>
