--- a/day09/corporation/corporation.html
+++ b/day09/corporation/corporation.html
@@ -102,27 +102,33 @@
         </div>
       </section>
 
-      <section class="third">
-        <div class="third__contents">
-          <div class="third__contens__nav">
-            <div class="corporation">DCODELAB</div>
-            <ul>
-              <li>Policy</li>
-              <li>Terms</li>
-              <li>Family</li>
-              <li>SiteSitemap</li>
-            </ul>
+      <footer>
+        <div class="footer">
+          <div class="footer__menu">
+            <div class="footer__menu__logo">
+              <span>DCODELAB</span>
+            </div>
+            <div class="footer__menu__main">
+              <span>Policy</span>
+              <span>Terms</span>
+              <span>Family</span>
+              <span>SiteSitemap</span>
+            </div>
           </div>
-          <div class="address">
-            <span
-              >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas,
-              facere.</span
-            >
-            <span>TEL : 031-111-1234 C.P : 010-1234-5678</span>
-            <span>2020 DOCDELAB © copyright all right reserved.</span>
+          <div class="footer__con">
+            <div class="footer__con__con1">
+              <span
+                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas,
+                facere.</span
+              >
+              <span>TEL : 031-111-1234 C.P : 010-1234-5678</span>
+            </div>
+            <div class="footer__con__con2">
+              <span>2020 DOCDELAB © copyright all right reserved.</span>
+            </div>
           </div>
         </div>
-      </section>
+      </footer>
     </main>
   </body>
 </html>
